<resources>
    <string name="app_name">True or False?</string>
    <string name="fileForQuestions" translatable="false">filequestions</string>
    <string name="buttonFalseText">False</string>
    <string name="buttonTrueText">True</string>
    <string name="CountCurrentUserAnswers" translatable="false">0</string>
    <string name="CountUserNotCurrentAnswers" translatable="false">0</string>
    <string name="hintOfCurrentAnswer">..tap the screen to return..</string>
    <string name="buttonStart_Text">Start</string>
    <string name="buttonSetting_Text">Settings</string>
    <string name="buttonExit_Text">Exit</string>
    <string name="textViewQuestionsBar">The total number of questions:</string>
    <string name="textViewAnswerBar">The correct answers:</string>
    <string name="textView_Result_CurrentAnswers_Text">The number of correct answers:</string>
    <string name="textView_Result_NotCurrentAnswers_Text">The number of wrong answers:</string>
    <string name="textView_RatioAnswers_Text">The ratio of correct answers:</string>
    <string name="textView_Result_CountOfQuestionsResult" translatable="false">100</string>
    <string name="textView_Result_CurrentAnswers_Result" translatable="false">30</string>
    <string name="textView_Result_NotCurrentAnswers_Result" translatable="false">70</string>
    <string name="textView_RatioAnswers_Result" translatable="false">30%</string>
    <string name="buttonResume_Text">Продолжить</string>
    <string name="CountCurrentUserAntiLives" translatable="false">0</string>
    <string name="CountCurrentUserLives" translatable="false">5</string>
    <string name="textViewLivesBar">The number of possible errors:</string>
    <string name="RateForApp">If you like this app, vote for it or write a review:</string>
    <string name="textView_Result1_HeadText">Bad</string>
    <string name="textView_Result1_BodyText">"  You showed a very bad result. Increase your erudition."</string>
    <string name="textView_Result2_BodyText">"  You have a mediocre result. It is necessary to develop comprehensively."</string>
    <string name="textView_Result2_HeadText">Satisfactory</string>
    <string name="textView_Result3_BodyText">An indicator of good education. But don\'t relax.</string>
    <string name="textView_Result3_HeadText">Well</string>
    <string name="textView_Result4_BodyText">Your knowledge help you in life. Not many have achieved such a result.</string>
    <string name="textView_Result4_HeadText">Great</string>
    <string name="textView_Result5_BodyText">The result reflects a lot of work in the accumulation of knowledge.</string>
    <string name="textView_Result5_HeadText">Great</string>
    <string name="_q001">The caterpillar muscle more than the man.</string>
    <string name="_q002">Non-stop flight of a dove may exceed 40 000 kilometres.</string>
    <string name="_q003">Rabbits run faster than hare.</string>
    <string name="_q004">Purebred pigeon was bought for $200,000.</string>
    <string name="_q005">In Australia, over-population of rabbits — a national disaster.</string>
    <string name="_q006">Unripe tomatoes are poisonous.</string>
    <string name="_q007">Pink flamingos have this color since birth.</string>
    <string name="_q008">Camels tolerate dehydration due to the particular structure of red blood cells.</string>
    <string name="_q009">The temperature of the blood of certain fishes may be below zero degrees Celsius.</string>
    <string name="_q010">The fastest mammal on Earth - hare.</string>
    <string name="_q011">Cow per day produce more saliva than milk.</string>
    <string name="_q012">Lemon can not weigh more than 1 kilogram.</string>
    <string name="_q013">A cow can distinguish bitter milk.</string>
    <string name="_q014">Mosquitoes, when choosing who to attack, guided only by the body temperature.</string>
    <string name="_q015">Cows on the Earth more than people.</string>
    <string name="_q016">In the Russian cartoon Mowgli Bagheera is female.</string>
    <string name="_q017">The first Bicycle lane appeared in Russia over 100 years ago.</string>
    <string name="_q018">Strings for violins were originally made of animals.</string>
    <string name="_q019">Dolphins call each other by individual names.</string>
    <string name="_q020">The oldest rose Bush about 1000 years.</string>
    <string name="_q021">The early carrots were purple.</string>
    <string name="_q022">There are fish that can live on land.</string>
    <string name="_q023">Penguins can only live in cold climates.</string>
    <string name="_q024">In Thailand, all cats are Siamese.</string>
    <string name="_q025">Koalas almost do not drink the water.</string>
    <string name="_q026">In Russian and English languages is the word for the opposite direction of the knee.</string>
    <string name="_q027">The flint inside the lighter\'s not real.</string>
    <string name="_q028">There is a country where postage is free.</string>
    <string name="_q029">Males mosquitoes do not feed on blood.</string>
    <string name="_q030">The most expensive caviar is sturgeon black.</string>
    <string name="_q031">The shortest television commercial lasts 5 seconds.</string>
    <string name="_q032">Russian TV program \"Travel club\" hit the Guinness book of records.</string>
    <string name="_q033">The most popular girl\'s name - Catherine.</string>
    <string name="_q034">The character of the novel \"Heart of a Dog\" Professor Preobrazhensky is a living prototype.</string>
    <string name="_q035">The longest musical piece lasts for over 500 years.</string>
    <string name="_q036">Polar bears have white skin.</string>
    <string name="_q037">Some of the aborigines of Australia the language of communication there is a fourth gender.</string>
    <string name="_q038">Papa Carlo in the Russian film \"Pinocchio\" is a real person.</string>
    <string name="_q039">In order to recognize the subject of fine art enough opinion of one person.</string>
    <string name="_q040">Russian language is a list of the official languages of the UN.</string>
    <string name="_q041">There is a rose that changes color of its petals during the day.</string>
    <string name="_q042">In Belgium there are outdoor toilets for dogs.</string>
    <string name="_q043">Starfish have a number of eyes corresponding to the number of limbs.</string>
    <string name="_q044">Lightning strikes upwards.</string>
    <string name="_q045">Chinese typewriters more than 5,000 keys.</string>
    <string name="_q046">Sundress clothes were for men.</string>
    <string name="_q047">Skirt is in uniform only Scottish army.</string>
    <string name="_q048">In a few hundred years cease to be born blond.</string>
    <string name="_q049">Hamlet was not written by William Shakespeare.</string>
    <string name="_q050">10% Land living animals still exist.</string>
    <string name="_q051">In Russia, the coins were less than one penny.</string>
    <string name="_q052">There are duels on the peacock feathers.</string>
    <string name="_q053">The musical composition may have a \"Platinum Disc\", but did not have a \"Golden Disc\".</string>
    <string name="_q054">The sun is not yellow.</string>
    <string name="_q055">Tape worms can eat themselves.</string>
    <string name="_q056">Hair is the hardest tissue in the human.</string>
    <string name="_q057">The word \"Hermitage\" means \"beautiful room\".</string>
    <string name="_q058">Weight of ink to one point in the text of the newspaper not less than 0.1 gram.</string>
    <string name="_q059">Pluto revolves around the Sun at more than 200 times slower than the Earth.</string>
    <string name="_q060">Coffee is the most purchased goods on the international market.</string>
    <string name="_q061">Musical instrument \"faggot\" only do one tree.</string>
    <string name="_q062">The number of teeth in the born identical twins the same.</string>
    <string name="_q063">Australia is not moving around the world.</string>
    <string name="_q064">The largest amount of vitamin C is in oranges.</string>
    <string name="_q065">The mole can\'t dig a hole and hide in it for 1 minute.</string>
    <string name="_q066">Neanderthal brain less brain of modern man.</string>
    <string name="_q067">Rhyme about Humpty Dumpty was dedicated to a specific person.</string>
    <string name="_q068">In place of fallen hair nothing else grows.</string>
    <string name="_q069">Heated iron never evaporates.</string>
    <string name="_q070">Half of the earth\'s Land surface is desert.</string>
    <string name="_q071">There is a TV channel that only shows fish.</string>
    <string name="_q072">The internal surface area of human lungs is equal to the area of the unfolded newspaper.</string>
    <string name="_q073">Jean Claude van Damme does not have an alias, ie, that\'s his real name.</string>
    <string name="_q074">Every year on Earth is not more than 10,000 earthquakes.</string>
    <string name="_q075">Snakes do not distinguish between the sounds.</string>
    <string name="_q076">In Russian dictionaries there is no word \"buzzing\".</string>
    <string name="_q077">No one found the diamond was more than 3,000 carats.</string>
    <string name="_q078">Absolutely pure gold is very solid.</string>
    <string name="_q079">Grapes cannot be heated in a microwave oven.</string>
    <string name="_q080">Drownings can live.</string>
    <string name="_q081">Everyone who went down Niagara falls in a barrel survived.</string>
    <string name="_q082">Between the birth of twins can\'t go more than 1 day.</string>
    <string name="_q083">Arabic numerals invented by the Arabs.</string>
    <string name="_q084">Every year all people of the planet consumed more than half a trillion chicken eggs.</string>
    <string name="_q085">Roquefort cheese is made from horse\'s milk.</string>
    <string name="_q086">On the walk of fame is dedicated to the cartoon character.</string>
    <string name="_q087">The most ancient plant on the Ground - clover.</string>
    <string name="_q088">The main part of the composition of household dust cloth.</string>
    <string name="_q089">20% of bacteria known to mankind, threat to human health.</string>
    <string name="_q090">Eskimos have no word for snow.</string>
    <string name="_q091">On the International space station has the bell.</string>
    <string name="_q092">Chinese more than rabbits in Australia.</string>
    <string name="_q093">Cinderella lost her right shoe.</string>
    <string name="_q094">The most long-lived mammal on Earth - an elephant.</string>
    <string name="_q095">The number of stars in our galaxy consistently.</string>
    <string name="_q096">In the language of the citizens of Papua have only two words denoting color.</string>
    <string name="_q097">From snake bites kills more people than bee stings.</string>
    <string name="_q098">Russian word \"doctor\" comes from the word \"lie\".</string>
    <string name="_q099">In Britain banned some stick brand, turning them.</string>
    <string name="_q100">Proton heavier than an electron.</string>
    <string name="_q101">Buddha lived 2000 years.</string>
    <string name="_q102">There is a body of water \"dead,\" Dead Sea.</string>
    <string name="_q103">In one of the cities in the US it is prohibited in the street with no money.</string>
    <string name="_q104">The head of an elephant brain weighs 5% of its weight.</string>
    <string name="_q105">In the past, the British necessarily carry a whistle.</string>
    <string name="_q106">Children in Finland do not believe in the existence of Santa Claus.</string>
    <string name="_q107">Some cars have under the feet of the driver\'s hatch for fishing.</string>
    <string name="_q108">Diamond and diamond are the same in composition.</string>
    <string name="_q109">You can see a rainbow and the sun at the same time.</string>
</resources>