<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.kev163.trueorfalse.MainActivity"
    android:background="@color/colorMy1Blue">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="true"
        android:weightSum="10">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="3.0"
            android:id="@+id/layoutUpperMenu"
            android:layout_weight="2.3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/textViewQuestionsBar"
                android:id="@+id/textViewQuestionsBar"
                android:layout_weight="0.5"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:id="@+id/layoutQuestionBar" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CountCurrentUserAnswers"
                    android:id="@+id/textViewQuestionCount"
                    android:background="@color/colorMy1Green"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CountUserNotCurrentAnswers"
                    android:id="@+id/textViewQuestionQuantity"
                    android:background="@color/colorMy1Red"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/textViewAnswerBar"
                android:id="@+id/textViewAnswerBar"
                android:layout_weight="0.5"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:id="@+id/layoutAnswerBar">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CountCurrentUserAnswers"
                    android:id="@+id/textViewAnswerCurrent"
                    android:background="@color/colorMy1Green"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CountUserNotCurrentAnswers"
                    android:id="@+id/textViewAnswerNotCurrent"
                    android:background="@color/colorMy1Red"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/textViewLivesBar"
                android:id="@+id/textViewLivesBar"
                android:textColor="@android:color/white"
                android:layout_weight="0.5" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="1.0"
                android:layout_weight="0.5"
                android:id="@+id/layoutLivesBar">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewAntiLives"
                    android:background="@color/colorMy1Red"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="0.45" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/CountCurrentUserLives"
                    android:id="@+id/textViewLives"
                    android:background="@color/colorMy1Green"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="0.45"
                    android:textIsSelectable="false" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="+1"
                    android:id="@+id/textViewAddLives"
                    android:background="@color/colorMy1Green"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="0.1"
                    android:textIsSelectable="false"
                    android:paddingLeft="5dp"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5.0"
            android:id="@+id/layoutQuestionText"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/textViewQuestionText"
                android:textColor="@android:color/white"
                android:textSize="23sp"
                android:textStyle="normal|bold" />
        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/layoutTrueFalseButton"
            android:baselineAligned="false"
            android:layout_weight="1.8">

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/buttonTrueText"
                    android:id="@+id/buttonTrue"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="false"
                    android:background="@color/colorMy1Green"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:singleLine="true"
                    android:gravity="center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/buttonFalseText"
                    android:id="@+id/buttonFalse"
                    android:layout_alignParentRight="false"
                    android:layout_alignParentEnd="false"
                    android:background="@color/colorMy1Red"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:singleLine="true"
                    android:gravity="center" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
